# zyn

./: .gitignore  CLAUDE.md  Cargo.toml  Justfile  LICENSE  README-next.md  README-next2.md  README.md  pyproject.toml
bundles/gatzi/: deps.txt  post-install.sh
bundles/gatzi/lazygit/: config.yml
bundles/gatzi/yazi/: init.lua  keymap.toml  package.toml  yazi.toml
bundles/gigazyn/: deps.txt
bundles/gigazyn/nvim/plugin/: gigazyn.lua
bundles/kitty/kitty/: kitty.conf  open-actions.conf
bundles/zellij/config/layouts/: zyn.kdl
bundles/zennij/config/layouts/: zynm.kdl
plugins/zyn.yazi/: main.lua
src/zyn/: __init__.py  __main__.py  cli.py  editors.py
tests/: cli_runner.py  test_cli.py  test_zyn.py
zyn/: __main__.py
zyn-probe/: Cargo.toml
zyn-probe/src/: main.rs
