[project]
name = "zyn"
version = "0.0.1"
description = "One editor per workspace"
license = "MIT"
readme = "README.md"
authors = [
    { name = "Keyvan Mosharraf", email = "keyvan@keyvanm.com" }
]
requires-python = ">=3.14"
dependencies = ["typer"]

[project.scripts]
zyn = "zyn.__main__:app"
zyn-cli = "zyn.cli:app"

[dependency-groups]
dev = ["pytest"]

[build-system]
requires = ["uv_build>=0.11.14,<0.12.0"]
build-backend = "uv_build"